tests/fixtures/validate/strict/invalid/strict-invalid-section-name-1.yini
^ App.Title   // ERROR: invalid section name; dots are not allowed in simple identifiers
title = "My App"
enabled = true

/END
